--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -6,7 +6,11 @@ jobs:
     env:
       CI_JOB_NUMBER: 1
     steps:
-      - uses: actions/checkout@v1
+      - name: Install PNPM
+        uses: pnpm/action-setup@v2.2.1
+        with:
+          version: 6.0.2
+      - uses: actions/checkout@v3
       - uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
