--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/flexper/rosetty.git"
+  },
+  "bugs": {
+    "url": "https://github.com/flexper/rosetty/issues",
+    "email": "contact@flexper.fr"
+  },
   "files": [
     "dist",
     "src"
