--- a/package.json
+++ b/package.json
@@ -57,6 +57,13 @@
       "lcov"
     ]
   },
+  "resolutions": {
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.6.3"
+  },
   "devDependencies": {
     "@size-limit/preset-small-lib": "7.0.8",
     "@typescript-eslint/eslint-plugin": "5.20.0",
