--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           version: 6.0.2
 
       - name: Install deps and build (with cache)
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: Lint
         run: pnpm lint
@@ -46,7 +46,8 @@ jobs:
       - uses: pnpm/action-setup@v2.2.1
         with:
           version: 6.0.2
-      - run: pnpm install
+      - name: Install deps and build (with cache)
+        run: pnpm install --no-frozen-lockfile
       - run: pnpm test
       - uses: paambaati/codeclimate-action@v3.0.0
         env:
