--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.24",
+  "version": "1.3.25",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -56,6 +56,9 @@
     "coverageReporters": [
       "lcov"
     ]
+  },
+  "resolutions": {
+    "typescript": "4.7.4"
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "7.0.8",
