--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.65",
+  "version": "1.4.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -61,7 +61,9 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@jest/globals": "^29.1.2",
     "@size-limit/preset-small-lib": "8.1.0",
+    "@types/jest": "^29.1.1",
     "@typescript-eslint/eslint-plugin": "5.39.0",
     "@typescript-eslint/parser": "5.39.0",
     "eslint": "8.24.0",
