--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
-    "test": "tsdx test",
+    "test": "jest",
     "lint": "eslint src test",
     "prepare": "tsdx build",
     "size": "size-limit",
@@ -55,8 +55,11 @@
     "collectCoverage": true,
     "coverageReporters": [
       "lcov"
-    ]
+    ],
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom"
   },
+
   "resolutions": {
     "typescript": "4.9.5"
   },
@@ -64,23 +67,25 @@
     "@jest/globals": "29.5.0",
     "@size-limit/preset-small-lib": "8.2.4",
     "@types/jest": "29.5.0",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
-    "eslint": "8.36.0",
+    "@typescript-eslint/eslint-plugin": "5.57.1",
+    "@typescript-eslint/parser": "5.57.1",
+    "eslint": "8.37.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "husky": "8.0.3",
-    "np": "7.6.4",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
     "size-limit": "8.2.4",
+    "ts-jest": "^29.1.0",
     "tsdx": "0.14.1",
     "tslib": "2.5.0",
-    "typescript": "4.9.5"
+    "typescript": "5.0.3"
   },
   "dependencies": {
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.29.3",
     "rosetta": "^1.1.0"
   }
 }
