--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.157",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -84,7 +84,7 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
-    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.9",
     "rosetta": "^1.1.0"
   }
 }
