refactor: use tsup

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "2.0.8",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "./dist/index.cjs",
   "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
@@ -19,11 +19,9 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsup src/index.ts",
     "test": "jest",
     "lint": "eslint src test",
-    "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -40,7 +38,7 @@
   },
   "name": "rosetty",
   "author": "Qlaffont",
-  "module": "dist/rosetty.esm.js",
+  "module": "./dist/index.js",
   "size-limit": [
     {
       "path": "dist/rosetty.cjs.production.min.js",
@@ -81,10 +79,26 @@
     "ts-jest": "^29.1.0",
     "tsdx": "0.14.1",
     "tslib": "2.6.2",
+    "tsup": "^8.0.1",
+    "tsup-preset-solid": "^2.2.0",
     "typescript": "5.2.2"
   },
   "dependencies": {
     "dayjs": "^1.11.9",
     "rosetta": "^1.1.0"
-  }
+  },
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    }
+  },
+  "browser": {},
+  "typesVersions": {},
+  "type": "module"
 }
