--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   "scripts": {
     "build": "tsup src/index.ts",
     "test": "jest",
-    "lint": "eslint src test",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "lint": "eslint src test"
   },
   "husky": {
     "hooks": {
@@ -39,16 +37,6 @@
   "name": "rosetty",
   "author": "Qlaffont",
   "module": "./dist/index.js",
-  "size-limit": [
-    {
-      "path": "dist/rosetty.cjs.production.min.js",
-      "limit": "300 KB"
-    },
-    {
-      "path": "dist/rosetty.esm.js",
-      "limit": "200 KB"
-    }
-  ],
   "jest": {
     "collectCoverage": true,
     "coverageReporters": [
@@ -62,7 +50,6 @@
   },
   "devDependencies": {
     "@jest/globals": "29.7.0",
-    "@size-limit/preset-small-lib": "11.1.4",
     "@types/jest": "29.5.12",
     "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "7.16.0",
@@ -75,7 +62,6 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "3.3.3",
-    "size-limit": "11.1.4",
     "ts-jest": "^29.1.0",
     "tsdx": "0.14.1",
     "tslib": "2.6.3",
