--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.1.32",
+  "version": "4.0.0",
   "license": "MIT",
   "main": "./dist/index.cjs",
   "typings": "dist/index.d.ts",
@@ -49,28 +49,29 @@
     "typescript": "5.5.3"
   },
   "devDependencies": {
+    "@formatjs/intl-durationformat": "^0.7.4",
     "@jest/globals": "29.7.0",
     "@types/jest": "29.5.14",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
+    "@typescript-eslint/eslint-plugin": "8.30.1",
+    "@typescript-eslint/parser": "8.30.1",
+    "eslint": "9.24.0",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "husky": "9.0.11",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.3.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.3.2",
     "tsdx": "0.14.1",
     "tslib": "2.6.3",
-    "tsup": "^8.0.1",
+    "tsup": "^8.4.0",
     "tsup-preset-solid": "^2.2.0",
     "typescript": "5.5.3"
   },
   "dependencies": {
-    "date-fns": "^4.0.0",
+    "date-fns": "^4.1.0",
     "rosetta": "^1.1.0"
   },
   "types": "./dist/index.d.ts",
