--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typescript": "5.5.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@formatjs/intl-durationformat": "^0.7.4",
     "@jest/globals": "29.7.0",
     "@types/jest": "29.5.14",
